--- a/course-swap-backend/package.json
+++ b/course-swap-backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.2.0",
+    "google-auth-library": "^9.11.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "node-cron": "^3.0.3",
