--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 course-swap-backend/config/firebaseServiceAccountKey.json
+course-swap-backend/config/.credentials.json
 course-swap-backend/.env
 course-swap-app/src/config/Firebase.ts
