--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:80"
+    env_file:
+      - ./course-swap-app/.env 
     networks:
       - app-network
 
