--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,4 @@ jobs:
           script: |
             docker pull tanmaysalunke/myapp-frontend:${{ github.sha }}
             docker pull tanmaysalunke/myapp-backend:${{ github.sha }}
-            docker-compose -f /path/to/your/docker-compose.yml up -d
+            docker-compose -f /var/www/docker-compose.yml up -d
