--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,14 +28,25 @@ jobs:
           docker push tanmaysalunke/myapp-frontend:${{ github.sha }}
           docker push tanmaysalunke/myapp-backend:${{ github.sha }}
 
-      - name: Transfer .env file to EC2
+      - name: Transfer .env files to EC2
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           source: "./course-swap-app/.env"
-          target: "/var/www/"
+          target: "/var/www/course-swap-app/"
+          overwrite: true
+
+      - name: Transfer backend .env file to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "./course-swap-backend/.env"
+          target: "/var/www/course-swap-backend/"
+          overwrite: true
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
