--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,11 @@ jobs:
           source: "docker-compose.yml"
           target: "/var/www/CourseSwapApp/"
 
+      - name: Decode SSH Key
+        run: |
+          echo "${{ secrets.SSH_KEY }}" | base64 --decode > ${HOME}/.ssh/id_rsa
+          chmod 600 ${HOME}/.ssh/id_rsa
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
