--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,24 @@ jobs:
           source: "course-swap-app/Dockerfile"
           target: "/var/www/CourseSwapApp/course-swap-app/"
 
+      - name: Copy backend package files to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "course-swap-backend/package*.json"
+          target: "/var/www/CourseSwapApp/course-swap-backend/"
+
+      - name: Copy frontend package files to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "course-swap-app/package*.json"
+          target: "/var/www/CourseSwapApp/course-swap-app/"
+
       - name: Copy backend/Dockerfile to EC2
         uses: appleboy/scp-action@master
         with:
