--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,19 @@ jobs:
             ./course-swap-backend/package*.json
             ./docker-compose.yml
           target: "/var/www/CourseSwapApp/"
+          port: 22
+          timeout: 30s
+          command_timeout: 10m
+          use_insecure_cipher: false
+          rm: false
+          debug: true # Enable debugging to get more detailed logs if needed
+          strip_components: 0
+          overwrite: false
+          tar_dereference: false
+          tar_exec: tar
+          proxy_port: 22
+          proxy_timeout: 30s
+          proxy_use_insecure_cipher: false
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
