--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,14 +6,14 @@ on:
       - master
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # - name: Set up Docker
-      #   uses: docker/setup-buildx-action@v1
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v1
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -21,37 +21,43 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker images
+      - name: Build and push frontend image
         run: |
-          docker build --no-cache --pull -t tanmaysalunke/myapp-frontend:${{ github.sha }} ./course-swap-app
-          docker build --no-cache --pull -t tanmaysalunke/myapp-backend:${{ github.sha }} ./course-swap-backend
-          docker push tanmaysalunke/myapp-frontend:${{ github.sha }}
-          docker push tanmaysalunke/myapp-backend:${{ github.sha }}
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest ./course-swap-app
+          docker push ${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Pull images from Docker Hub
+      - name: Build and push backend image
         run: |
-          docker pull tanmaysalunke/myapp-frontend:${{ github.sha }}
-          docker pull tanmaysalunke/myapp-backend:${{ github.sha }}
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest ./course-swap-backend
+          docker push ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
 
-      - name: Stop and remove old frontend container
-        run: |
-          docker rm -f reactFrontendContainer || true
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v0.1.2
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            docker pull ${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
+            docker service update --force course-swap-app
+            docker service update --force course-swap-backend
+            docker run -d -p 3000:80 ${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest
+            docker run -d -p 5000:5000 \
+              --env-file /run/secrets/backend_env \
+              ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
 
-      - name: Stop and remove old backend container
-        run: |
-          docker rm -f reactBackendContainer || true
-
-      - name: Run the frontend Docker container
-        run: |
-          docker run -d -p 3000:80 --name reactFrontendContainer tanmaysalunke/myapp-frontend:${{ github.sha }}
-
-      - name: Run the backend Docker container
-        run: |
-          docker run -d -p 5000:5000 --name reactBackendContainer -e APP_PASSWORD=='${{secrets.APP_PASSWORD}}' tanmaysalunke/myapp-backend:${{ github.sha }}
+      - name: Set up Docker secrets on EC2
+        uses: appleboy/ssh-action@v0.1.2
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            echo ${{ secrets.APP_PASSWORD }} | docker secret create app_password -
+            echo ${{ secrets.MONGO_URI }} | docker secret create mongo_uri -
+            echo ${{ secrets.INIT_REFRESH_TOKEN }} | docker secret create init_refresh_token -
+            echo ${{ secrets.CLIENT_ID }} | docker secret create client_id -
+            echo ${{ secrets.CLIENT_SECRET }} | docker secret create client_secret -
+            echo ${{ secrets.REDIRECT_URI }} | docker secret create redirect_uri -
+            echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT }} | docker secret create firebase_service_account -
