--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,22 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest ./course-swap-backend
           docker push ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
 
+      - name: Set up Docker secrets on EC2
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.HOST }}
+          username: ubuntu
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            echo ${{ secrets.APP_PASSWORD }} | docker secret create app_password -
+            echo ${{ secrets.MONGO_URI }} | docker secret create mongo_uri -
+            echo ${{ secrets.INIT_REFRESH_TOKEN }} | docker secret create init_refresh_token -
+            echo ${{ secrets.CLIENT_ID }} | docker secret create client_id -
+            echo ${{ secrets.CLIENT_SECRET }} | docker secret create client_secret -
+            echo ${{ secrets.REDIRECT_URI }} | docker secret create redirect_uri -
+            echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT }} | docker secret create firebase_service_account -
+            echo ${{ secrets.BACKEND_ENV }} | docker secret create backend_env -
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.7
         with:
@@ -46,18 +62,3 @@ jobs:
             docker run -d -p 5000:5000 \
               --env-file /run/secrets/backend_env \
               ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
-
-      - name: Set up Docker secrets on EC2
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            echo ${{ secrets.APP_PASSWORD }} | docker secret create app_password -
-            echo ${{ secrets.MONGO_URI }} | docker secret create mongo_uri -
-            echo ${{ secrets.INIT_REFRESH_TOKEN }} | docker secret create init_refresh_token -
-            echo ${{ secrets.CLIENT_ID }} | docker secret create client_id -
-            echo ${{ secrets.CLIENT_SECRET }} | docker secret create client_secret -
-            echo ${{ secrets.REDIRECT_URI }} | docker secret create redirect_uri -
-            echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT }} | docker secret create firebase_service_account -
