--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,23 +40,17 @@ jobs:
           script: |
             set -e
 
-            # Remove existing secrets (if any)
-            docker secret rm app_password || true
-            docker secret rm mongo_uri || true
-            docker secret rm init_refresh_token || true
-            docker secret rm client_id || true
-            docker secret rm client_secret || true
-            docker secret rm redirect_uri || true
-            docker secret rm firebase_service_account || true
-              
-            # Create new secrets
-            echo "${{ secrets.APP_PASSWORD }}" | docker secret create app_password -
-            echo "${{ secrets.MONGO_URI }}" | docker secret create mongo_uri -
-            echo "${{ secrets.INIT_REFRESH_TOKEN }}" | docker secret create init_refresh_token -
-            echo "${{ secrets.CLIENT_ID }}" | docker secret create client_id -
-            echo "${{ secrets.CLIENT_SECRET }}" | docker secret create client_secret -
-            echo "${{ secrets.REDIRECT_URI }}" | docker secret create redirect_uri -
-            echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" | docker secret create firebase_service_account -
+            # Create backend_env file
+            echo "APP_PASSWORD=${{ secrets.APP_PASSWORD }}" > backend_env
+            echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> backend_env
+            echo "INIT_REFRESH_TOKEN=${{ secrets.INIT_REFRESH_TOKEN }}" >> backend_env
+            echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> backend_env
+            echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> backend_env
+            echo "REDIRECT_URI=${{ secrets.REDIRECT_URI }}" >> backend_env
+            echo "FIREBASE_SERVICE_ACCOUNT=${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" >> backend_env
+
+            # Transfer backend_env to EC2
+            scp backend_env ubuntu@${{ secrets.HOST }}:/home/ubuntu/backend_env
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.7
@@ -69,17 +63,17 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
 
             # Stop existing containers
-            docker ps -q --filter ancestor=***/course-swap-app:latest | xargs -r docker stop
-            docker ps -q --filter ancestor=***/course-swap-backend:latest | xargs -r docker stop
+            docker ps -q --filter ancestor=${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest | xargs -r docker stop
+            docker ps -q --filter ancestor=${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest | xargs -r docker stop
               
             # Remove existing containers
-            docker ps -a -q --filter ancestor=***/course-swap-app:latest | xargs -r docker rm
-            docker ps -a -q --filter ancestor=***/course-swap-backend:latest | xargs -r docker rm
+            docker ps -a -q --filter ancestor=${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest | xargs -r docker rm
+            docker ps -a -q --filter ancestor=${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest | xargs -r docker rm
 
             # Run the frontend container
-            docker run -d -p 3000:80 ***/course-swap-app:latest
+            docker run -d -p 3000:80 ${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest
 
             # Run the backend container with environment file
             docker run -d -p 5000:5000 \
-              --env-file /run/secrets/backend_env \
-              ***/course-swap-backend:latest
+              --env-file /home/ubuntu/backend_env \
+              ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
