--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Test SSH Connection
+name: Deploy to EC2
 
 on:
   push:
@@ -6,9 +6,12 @@ on:
       - master
 
 jobs:
-  test-ssh:
+  deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Test SSH connection
         uses: appleboy/ssh-action@v0.1.7
         with:
@@ -18,3 +21,32 @@ jobs:
           port: 22
           script: |
             echo "Successfully connected to the EC2 instance!"
+
+      - name: Set up Docker on EC2
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.HOST }}
+          username: ubuntu
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            sudo apt-get update
+            sudo apt-get install -y docker.io
+
+      - name: Transfer files to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ubuntu
+          key: ${{ secrets.SSH_KEY }}
+          source: "path/to/your/local/file"
+          target: "/home/ubuntu/remote/file/path"
+
+      - name: Deploy application using Docker
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.HOST }}
+          username: ubuntu
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            docker pull your-docker-image
+            docker run -d -p 80:80 your-docker-image
