--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,24 +22,37 @@ jobs:
           script: |
             echo "Successfully connected to the EC2 instance!"
 
-      - name: Set up Docker on EC2
+      - name: Clean up APT sources list and install Docker
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.HOST }}
           username: ubuntu
           key: ${{ secrets.SSH_KEY }}
           script: |
-            sudo apt-get update
-            sudo apt-get install -y docker.io
+            set -e
+            # Remove duplicate Docker sources
+            sudo rm -f /etc/apt/sources.list.d/archive_uri-https_download_docker_com_linux_ubuntu-noble.list
+            sudo rm -f /etc/apt/sources.list.d/docker.list
 
-      - name: Transfer files to EC2
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_KEY }}
-          source: "path/to/your/local/file"
-          target: "/home/ubuntu/remote/file/path"
+            # Add the Docker repository
+            sudo apt-get update
+            sudo apt-get install -y \
+              apt-transport-https \
+              ca-certificates \
+              curl \
+              gnupg-agent \
+              software-properties-common
+
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+            sudo add-apt-repository \
+              "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+              
+            # Remove any conflicting packages
+            sudo apt-get remove -y containerd containerd.io
+
+            # Update package index and install Docker
+            sudo apt-get update
+            sudo apt-get install -y docker-ce docker-ce-cli containerd.io
 
       - name: Deploy application using Docker
         uses: appleboy/ssh-action@v0.1.7
