--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,47 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Test SSH connection
-        uses: appleboy/ssh-action@v0.1.7
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
         with:
-          host: ${{ secrets.HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          script: |
-            echo "Successfully connected to the EC2 instance!"
-
-      - name: Clean up APT sources list and install Docker
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            set -e
-            # Remove duplicate Docker sources
-            sudo rm -f /etc/apt/sources.list.d/archive_uri-https_download_docker_com_linux_ubuntu-noble.list
-            sudo rm -f /etc/apt/sources.list.d/docker.list
-
-            # Add the Docker repository
-            sudo apt-get update
-            sudo apt-get install -y \
-              apt-transport-https \
-              ca-certificates \
-              curl \
-              gnupg-agent \
-              software-properties-common
-
-            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-            sudo add-apt-repository \
-              "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-              
-            # Remove any conflicting packages
-            sudo apt-get remove -y containerd containerd.io
-
-            # Update package index and install Docker
-            sudo apt-get update
-            sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Deploy application using Docker
         uses: appleboy/ssh-action@v0.1.7
@@ -61,5 +25,5 @@ jobs:
           username: ubuntu
           key: ${{ secrets.SSH_KEY }}
           script: |
-            docker pull your-docker-image
-            docker run -d -p 80:80 your-docker-image
+            docker pull tanmaysalunke/course-swap-app:latest
+            docker run -d -p 80:80 tanmaysalunke/course-swap-app:latest
