--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to EC2
+name: Test SCP Command to EC2
 
 on:
   push:
@@ -6,74 +6,24 @@ on:
       - master
 
 jobs:
-  deploy:
+  test-scp:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v1
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push frontend image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest ./course-swap-app
-          docker push ${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest
-
-      - name: Build and push backend image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest ./course-swap-backend
-          docker push ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest
-
-      - name: Set up Docker secrets on EC2
+      - name: Test SSH connection and SCP file to EC2
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.HOST }}
           username: ubuntu
           key: ${{ secrets.SSH_KEY }}
           script: |
-            set -e
             echo "Disabling strict host key checking..."
             mkdir -p ~/.ssh
             echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
-            echo "Creating backend_env file..."
-            echo "APP_PASSWORD=${{ secrets.APP_PASSWORD }}" > backend_env
-            echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> backend_env
-            echo "INIT_REFRESH_TOKEN=${{ secrets.INIT_REFRESH_TOKEN }}" >> backend_env
-            echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> backend_env
-            echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> backend_env
-            echo "REDIRECT_URI=${{ secrets.REDIRECT_URI }}" >> backend_env
-            echo "FIREBASE_SERVICE_ACCOUNT=${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" >> backend_env
-            echo "Transferring backend_env to EC2..."
-            scp -o StrictHostKeyChecking=no backend_env ubuntu@${{ secrets.HOST }}:/home/ubuntu/backend_env
-            echo "Transfer complete."
 
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            echo "Pulling latest Docker images..."
-            docker pull ${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest || exit 1
-            docker pull ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest || exit 1
-            echo "Stopping existing containers..."
-            docker ps -q --filter ancestor=${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest | xargs -r docker stop
-            docker ps -q --filter ancestor=${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest | xargs -r docker stop
-            echo "Removing existing containers..."
-            docker ps -a -q --filter ancestor=${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest | xargs -r docker rm
-            docker ps -a -q --filter ancestor=${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest | xargs -r docker rm
-            echo "Running frontend container..."
-            docker run -d -p 3000:80 ${{ secrets.DOCKER_USERNAME }}/course-swap-app:latest || exit 1
-            echo "Running backend container with environment file..."
-            docker run -d -p 5000:5000 \
-              --env-file /home/ubuntu/backend_env \
-              ${{ secrets.DOCKER_USERNAME }}/course-swap-backend:latest || exit 1
-            echo "Deployment complete."
+            echo "Testing SCP command..."
+            echo "This is a test file." > test_file.txt
+            scp -v -o StrictHostKeyChecking=no test_file.txt ubuntu@${{ secrets.HOST }}:/home/ubuntu/test_file.txt
+
+            echo "Checking if the file was transferred..."
+            ls -l /home/ubuntu/test_file.txt
+            echo "SCP test completed."
